# CppProjectTemplate

./: CMakeLists.txt  README.md  change_project_name.py  sampleCommands.txt
apps/: CMakeLists.txt  ProjectTemplateApp.cpp
docs/: CMakeLists.txt  mainpage.md
include/: ProjectTemplate.hpp
src/: CMakeLists.txt  ProjectTemplate.cpp
test/: CMakeLists.txt  ProjectTemplateTester.cpp
